src/components/HomePage/Message.module.scss
@use "@/index.module.scss" as *;

.container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    gap: $padding * 0.5;
    opacity: 0;
}

.message {
    @extend .panel;

    min-width: 100px;
    max-width: 90%;
    overflow: hidden;
}

.containerLeft {
    align-items: flex-start;
}

.containerRight {
    align-items: flex-end;
}

.left {
    border-radius: 0 $border-radius $border-radius $border-radius;
}

.right {
    border-radius: $border-radius 0 $border-radius $border-radius;
}

.senderName {
    color: $secondary-color;
    font-size: $font-size-small;
    margin: 0;
}

.text {
    overflow-wrap: break-word;
    font-size: $font-size-base;
    margin: 0;
}

.sentAt {
    @extend .senderName;

    text-align: right;
    font-size: $font-size-smallest;
}

@keyframes jump {
    from {
        scale: 0;
    }
    to {
        scale: 1;
    }
}

.senderAvatar {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    animation: jump 0.3s ease-in-out;
}

